adding dockerfile